--- a/src/main/resources/static/css/member/findId.css
+++ b/src/main/resources/static/css/member/findId.css
@@ -1,11 +1,26 @@
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  * {
+    font-family: 'Pretendard-Regular';
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+
 .content-box {
   display: flex;
   flex-direction: row;
   align-items: stretch;
   gap: 20px;
   width: 100%; 
-  min-height: 100vh;
-  height: 100%;
+  min-height: 40vh;
+  height: auto;
   overflow-x: hidden;
 }
 
@@ -104,10 +119,10 @@ div label {
 
 .progress-breadcrumb .breadcrumb-item {
   position: relative;
-  padding: 10px 25px 10px 35px;
+  padding: 10px 2px 10px 35px;
   background: #f8f9fa;
   color: #6c757d;
-  margin-right: 20px;
+  margin-right: 10px;
   clip-path: polygon(0% 0%, 90% 0%, 100% 50%, 90% 100%, 0% 100%, 10% 50%);
 }
 
@@ -133,7 +148,7 @@ div label {
 
 /* SVG 아이콘 스타일 */
 .progress-breadcrumb .bi {
-  margin-right: 8px;
+  margin-right: 7px;
   vertical-align: middle;
   position: relative;
   z-index: 1;
@@ -155,4 +170,22 @@ div label {
 /* stepId와 stepPassword는 초기에 숨김 처리 */
 #stepId, #stepPassword {
   display: none;
+}
+
+
+#stepResult::before{
+  display: none;
+}
+
+#stepId::before{
+  display: none;
+}
+
+#stepPassword::before{
+  display: none;
+}
+
+
+#findIdBtn::before{
+  background-color: #205375;
 }
