--- a/src/main/resources/static/css/myPage/myOrder.css
+++ b/src/main/resources/static/css/myPage/myOrder.css
@@ -21,24 +21,19 @@
     gap: 20px;
     min-height: calc(100vh - 100px);
   }
-
   
-  .myPageSideBar {
-    max-width: 250px;  /* 사이드바 최대 너비 */
-    height: 100vh;  /* 화면 전체 높이 */
-    background-color: white;
-    border-radius: 10px;
-    box-sizing: border-box;
-    flex-shrink: 0; 
+  /* 필수 항목 표시 스타일 */
+  .red {
+    font-weight: bold;
+    color: red;
+    margin-bottom: 0;
     display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 20px;
-    border-right: 1px solid #ddd;
+    justify-content: center;
+    align-items: center;
   }
   
   .mainContent {
-    flex-grow: 1;  /* 주 콘텐츠가 사이드바 공간을 제외한 나머지를 차지하도록 설정 */
+    flex-grow: 1;  
     padding: 30px;
     padding-top: 0;
     padding-left: 0;
@@ -46,38 +41,44 @@
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
-
-  .title {
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    color: #333;
-  }
   
-  .content-box{
-    margin-top: 0px;
+  .content-box {
+    display: block;
+    padding: 20px;
+    width: 100%;
   }
 
+
+.mypage-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 2rem;
+}
 
 .mypage-header {
-    margin-top: 20px;
+    margin-bottom: 2rem;
     padding-bottom: 1rem;
     border-bottom: 2px solid #e9ecef;
-    margin-bottom: 0px !important;
 }
 
 .title-area {
     display: flex;
-    width: 70%;
+    justify-content: space-between;
     align-items: center;
-    margin-left: 20px;
-    margin-right:20px
 }
 
 .welcome-title {
-    font-size: 2.5rem;
+    font-size: 2.0rem;
     color: #2c3e50;
     font-weight: 700;
+}
+
+
+.order-total-price {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #333;
+    margin: 1rem 0;
 }
 
 .user-info {
