--- a/src/main/resources/static/css/myPage/myWishList.css
+++ b/src/main/resources/static/css/myPage/myWishList.css
@@ -126,20 +126,44 @@
     padding: 20px;
     text-decoration: none;
     color: inherit;
-    width: 100%; /* 부모 크기와 맞추기 */
-    height: 100%; /* 부모 크기와 맞추기 */
+    width: 100%; 
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 /* 책 제목 */
+.book-title-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.book-heart {
+    font-size: 1.2rem;
+    color: #e74c3c;
+    cursor: pointer;
+    transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.book-heart:hover {
+    transform: scale(1.8); 
+}
+
 .book-title {
     font-size: 1.2rem;
     font-weight: bold;
     color: #333;
     margin-bottom: 10px;
 }
+
+
+
+.book-title > i {
+    color: #e74c3c;
+}
+
 
 /* 리뷰 점수 */
 .review-score {
@@ -192,15 +216,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 40px;
-    padding: 10px 0;
+    margin-top: 60px; /* 기존보다 여유롭게 간격 추가 */
+    padding: 20px 0; /* 위아래 패딩을 추가 */
     list-style: none;
 }
 
+
+/* 페이지네이션 링크 */
 .page-link {
     padding: 10px 16px;
     background-color: #f1f3f5;
-    color: #495057;
+    color: #333 !important;
     border: 1px solid #ddd;
     border-radius: 4px;
     text-decoration: none;
@@ -219,8 +245,9 @@
 
 /* 활성 페이지 */
 .page-link.active {
-    background-color: #205375;
-    color: #fff;
+    background-color: #205375 !important;
+    border: 1px solid #205375 !important;
+    color: #fff !important;
     font-weight: bold;
     pointer-events: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
