관리자 메인페이지 회원정보 보기 추가

--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -186,6 +186,94 @@
                 </ul>
               </div>
             </div>
+
+            <div class="pop-up hidden" style="margin-left: -1800px;">
+              <button id="close">X</button>
+              <div>
+                <h3>회원 정보</h3>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>아이디</th>
+                      <th>전체 구매 금액</th>
+                      <th>탈퇴 신청 여부(Y/N)</th>
+                      <th>등급</th>
+                      <th>회원 상태 변경</th>
+                    </tr>
+                  </thead>
+                  <tbody id="memberInfo">
+                  </tbody>
+                </table>
+              </div>
+                
+              <div>
+                <h3 class="payment">구매 내역(총 금액)</h3>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>주문번호</th>
+                      <th>책 제목</th>
+                      <th>구매일자</th>
+                      <th>구매금액</th>
+                    </tr>
+                  </thead>
+                  <tbody id="payment">
+                  </tbody>
+                </table>
+                <div class="pagination-area" >
+                  <ul class="pagination1">
+                  
+                    
+                  </ul>
+                </div>
+              </div>
+                
+              <div>
+                <h3>리뷰 내역</h3>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>리뷰번호</th>
+                      <th>리뷰제목(별점)</th>
+                      <th>리뷰 내용</th>
+                      <th>삭제</th>
+                    </tr>
+                  </thead>
+                  <tbody id="review">
+                  </tbody>
+                </table>
+                <div class="pagination-area" >
+                  <ul class="pagination2">
+                  
+                    
+                  </ul>
+                </div>
+              </div>
+                
+              <div>
+                <h3>문의 내역</h3>
+                <table>
+                  <thead>
+                    <tr>
+                      <th>문의번호</th>
+                      <th>문의제목</th>
+                      <th>문의 내용</th>
+                      <th>상태</th>
+                    </tr>
+                  </thead>
+                  <tbody id="query">
+                  </tbody>
+                </table>
+                <div class="pagination-area" >
+                  <ul class="pagination3">
+                  
+                    
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            
           </div>
         </div>
       </div>
