--- a/src/main/resources/templates/admin/adminRequest.html
+++ b/src/main/resources/templates/admin/adminRequest.html
@@ -179,7 +179,7 @@
         </div>
         <div>
           <label for="bookCover"> 책 이미지 : </label>
-          <input type="text" id="bookCover" name="bookCover">
+          <input type="file" id="bookCover" name="bookCover">
         </div>
         <div>
           <label for="bookWriter"> 지은이 : </label>
