--- a/src/main/resources/templates/admin/adminNewBook.html
+++ b/src/main/resources/templates/admin/adminNewBook.html
@@ -147,6 +147,9 @@
                 <button class="updateBtn" th:value="*{bookNo}">
                   등록하기
                 </button>
+                <button class="deleteBtn" th:value="*{requestNo}">
+                  삭제
+                </button>
               </td>
             </tr>
           </th:block>
