--- a/src/main/resources/static/css/myPage/info.css
+++ b/src/main/resources/static/css/myPage/info.css
@@ -75,3 +75,13 @@ div label {
   margin-bottom: 100px;
 }
 
+
+.timer-text {
+  position: absolute;
+  right: 40px;  /* clear 버튼 왼쪽에 위치 */
+  top: 50%;
+  transform: translateY(-50%);
+  color: #dc3545;  /* 빨간색 */
+  font-size: 0.9rem;
+  font-weight: bold;
+}
