--- a/src/main/resources/templates/myPage/changePw.html
+++ b/src/main/resources/templates/myPage/changePw.html
@@ -62,6 +62,7 @@
                           <label for="floatingPhoneCheck">인증번호 확인</label>
                           <button type="button" id="phoneCheckClearBtn" class="btn-close clear-btn"
                             onclick="clearInput('floatingPhoneCheck')" aria-label="Clear" tabindex="-1"></button>
+                          <span id="timer" class="timer-text"></span>
                         </div>
                         <div class="col-auto">
                           <button type="button" id="phoneCertifiedBtn" class="btn btn-primary">인증번호 인증</button>
