--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -12,14 +12,26 @@
   <header th:replace="~{common/common}"></header>
   <main>
 
+    <section class="filter-section">
+      <div class="filter-sidebar">
+        <div id="selectedCategoryPopup" class="selected-popup">
+          <h3>카테고리</h3>
+          <button id="categoryButton" class="filter-btn">카테고리 선택</button>
+          <div id="selectedCategoryValues" class="selected-values">선택한 항목</div>
+        </div>
+        <div id="selectedPreferencePopup" class="selected-popup">
+          <h3>취향</h3>
+          <button id="preferenceButton" class="filter-btn">취향 선택</button>
+          <div id="selectedPreferenceValues" class="selected-values">선택한 항목</div>
+        </div>
+      </div>
+    </section>
 
-    <!-- 선택한 값이 표시되는 영역 -->
-    <div id="selectedCategoryValues" class="selectedCategoryValues">선택한 항목:</div>
-    <div id="selectedPreferenceValues" class="selectedPreferenceValues">선택한 항목:</div>
 
 
-    <!-- 카테고리 버튼 -->
-    <button id="categoryButton">카테고리 선택</button>
+
+
+
 
     <!-- 체크박스 창 (기본적으로 숨김) -->
     <div id="checkboxCategory" class="checkbox-category">
@@ -27,43 +39,32 @@
       <div class="checkbox-categoryList">
         <div class="myCategoryBringingIn">
           <label>
-            <button id="myCategoryBringingInBtn" > 내 카테고리 불러오기</button>
+            <button id="myCategoryBringingInBtn"> 내 카테고리 불러오기</button>
           </label>
         </div>
 
-        <label><input type="checkbox" value="1"
-            th:checked="${param.category != null and param.category.contains('1')}"
+        <label><input type="checkbox" value="1" th:checked="${param.category != null and param.category.contains('1')}"
             class="categoryCheckbox">소설</label>
-        <label><input type="checkbox" value="2"
-            th:checked="${param.category != null and param.category.contains('2')}"
+        <label><input type="checkbox" value="2" th:checked="${param.category != null and param.category.contains('2')}"
             class="categoryCheckbox">비문학</label>
-        <label><input type="checkbox" value="3"
-            th:checked="${param.category != null and param.category.contains('3')}"
+        <label><input type="checkbox" value="3" th:checked="${param.category != null and param.category.contains('3')}"
             class="categoryCheckbox">역사</label>
-        <label><input type="checkbox" value="4"
-            th:checked="${param.category != null and param.category.contains('4')}"
+        <label><input type="checkbox" value="4" th:checked="${param.category != null and param.category.contains('4')}"
             class="categoryCheckbox">과학</label>
-        <label><input type="checkbox" value="5"
-            th:checked="${param.category != null and param.category.contains('5')}"
+        <label><input type="checkbox" value="5" th:checked="${param.category != null and param.category.contains('5')}"
             class="categoryCheckbox">자기개발</label>
-        <label><input type="checkbox" value="6"
-            th:checked="${param.category != null and param.category.contains('6')}"
+        <label><input type="checkbox" value="6" th:checked="${param.category != null and param.category.contains('6')}"
             class="categoryCheckbox">판타지</label>
-        <label><input type="checkbox" value="7"
-            th:checked="${param.category != null and param.category.contains('7')}"
+        <label><input type="checkbox" value="7" th:checked="${param.category != null and param.category.contains('7')}"
             class="categoryCheckbox">미스터리</label>
-        <label><input type="checkbox" value="8"
-            th:checked="${param.category != null and param.category.contains('8')}"
+        <label><input type="checkbox" value="8" th:checked="${param.category != null and param.category.contains('8')}"
             class="categoryCheckbox">철학</label>
-        <label><input type="checkbox" value="9"
-            th:checked="${param.category != null and param.category.contains('9')}"
+        <label><input type="checkbox" value="9" th:checked="${param.category != null and param.category.contains('9')}"
             class="categoryCheckbox">문학</label>
         <label><input type="checkbox" value="10"
-            th:checked="${param.category != null and param.category.contains('10')}"
-            class="categoryCheckbox">예술</label>
+            th:checked="${param.category != null and param.category.contains('10')}" class="categoryCheckbox">예술</label>
         <label><input type="checkbox" value="11"
-            th:checked="${param.category != null and param.category.contains('11')}"
-            class="categoryCheckbox">고전</label>
+            th:checked="${param.category != null and param.category.contains('11')}" class="categoryCheckbox">고전</label>
         <label><input type="checkbox" value="12"
             th:checked="${param.category != null and param.category.contains('12')}"
             class="categoryCheckbox">심리학</label>
@@ -71,32 +72,24 @@
             th:checked="${param.category != null and param.category.contains('13')}"
             class="categoryCheckbox">경제경영</label>
         <label><input type="checkbox" value="14"
-            th:checked="${param.category != null and param.category.contains('14')}"
-            class="categoryCheckbox">정치</label>
+            th:checked="${param.category != null and param.category.contains('14')}" class="categoryCheckbox">정치</label>
         <label><input type="checkbox" value="15"
-            th:checked="${param.category != null and param.category.contains('15')}"
-            class="categoryCheckbox">여행</label>
+            th:checked="${param.category != null and param.category.contains('15')}" class="categoryCheckbox">여행</label>
         <label><input type="checkbox" value="16"
-            th:checked="${param.category != null and param.category.contains('16')}"
-            class="categoryCheckbox">수필</label>
+            th:checked="${param.category != null and param.category.contains('16')}" class="categoryCheckbox">수필</label>
         <label><input type="checkbox" value="17"
-            th:checked="${param.category != null and param.category.contains('17')}"
-            class="categoryCheckbox">종교</label>
+            th:checked="${param.category != null and param.category.contains('17')}" class="categoryCheckbox">종교</label>
         <label><input type="checkbox" value="18"
-            th:checked="${param.category != null and param.category.contains('18')}"
-            class="categoryCheckbox">교육</label>
+            th:checked="${param.category != null and param.category.contains('18')}" class="categoryCheckbox">교육</label>
         <label><input type="checkbox" value="19"
             th:checked="${param.category != null and param.category.contains('19')}"
             class="categoryCheckbox">스포츠</label>
         <label><input type="checkbox" value="20"
-            th:checked="${param.category != null and param.category.contains('20')}"
-            class="categoryCheckbox">요리</label>
+            th:checked="${param.category != null and param.category.contains('20')}" class="categoryCheckbox">요리</label>
       </div>
     </div>
 
 
-    <!-- Preference 버튼 -->
-    <button id="preferenceButton">취향 선택</button>
 
     <!-- Preference 체크박스 창 (기본적으로 숨김) -->
     <div id="checkboxPreference" class="checkbox-category">
@@ -104,7 +97,7 @@
       <div class="checkbox-preferenceList">
         <div class="myPreferenceBringingIn">
           <label>
-            <button id="myPreferenceBringingInBtn" > 내 카테고리 불러오기</button>
+            <button id="myPreferenceBringingInBtn"> 내 취향 불러오기</button>
           </label>
         </div>
         <label><input type="checkbox" value="1"
@@ -135,11 +128,11 @@
             th:checked="${param.preference != null and param.preference.contains('9')}"
             class="preferenceCheckbox">분석적</label>
         <label><input type="checkbox" value="10"
-            th:checked="${param.preference != null and param.preference.contains('10')}"
-            class="preferenceCheckbox">영감을 주는</label>
+            th:checked="${param.preference != null and param.preference.contains('10')}" class="preferenceCheckbox">영감을
+          주는</label>
         <label><input type="checkbox" value="11"
-            th:checked="${param.preference != null and param.preference.contains('11')}"
-            class="preferenceCheckbox">휴식과 치유</label>
+            th:checked="${param.preference != null and param.preference.contains('11')}" class="preferenceCheckbox">휴식과
+          치유</label>
         <label><input type="checkbox" value="12"
             th:checked="${param.preference != null and param.preference.contains('12')}"
             class="preferenceCheckbox">현실적</label>
@@ -175,14 +168,13 @@
 
 
     <form action="/addBooks" method="PUT" id="bookForm">
-
+      <!-- 검색 결과 및 옵션 -->
       <div class="search-result-container">
         <div class="search-result">
           <p>검색결과 (<span th:text="${totalCount}">0</span>건)</p>
-
         </div>
         <div class="options">
-          <select name="searchOption" id="searchOptionSelect" >
+          <select name="searchOption" id="searchOptionSelect">
             <option value="none">=== 선택 ===</option>
             <option value="highScore">평점 높은순</option>
             <option value="lowScore">평점 낮은순</option>
@@ -191,134 +183,88 @@
             <option value="highPrice">가격 높은순</option>
             <option value="lowPrice">가격 낮은순</option>
           </select>
-        </div>
-        <div>
           <button type="button" id="applyOption">적용</button>
         </div>
         <div class="check-toGo">
-          <label class="allCheck">
-            <button type="button" id="selectAllButton" th:if="${session.loginMember != null}">전체선택</button>
-          </label>
-          <label class="check-bagButton">
-            <button type="button" onclick="ifChecked('cart')"
-              th:if="${session.loginMember != null}">장바구니</button></label>
-          <label class="check-wishListButton">
-            <button type="button" onclick="ifChecked('wishlist')" th:if="${session.loginMember != null}">찜</button>
-          </label>
+          <button type="button" id="selectAllButton" th:if="${session.loginMember != null}">전체선택</button>
+          <button type="button" onclick="ifChecked('cart')" th:if="${session.loginMember != null}">장바구니</button>
+          <button type="button" onclick="ifChecked('wishlist')" th:if="${session.loginMember != null}">찜</button>
         </div>
       </div>
 
+      <!-- 책 리스트 -->
+      <div th:each="book : ${bookList}" class="book-item" data-book-no="${book.bookNo}"
+        data-score-avg="${book.scoreAvg}">
+        <!-- 선택 박스 -->
+        <input type="checkbox" th:value="${book.bookNo}" class="book-checkbox" id="bookCheckbox">
 
+        <!-- 책 이미지 및 상세정보 -->
+        <!-- <a th:href="@{/searchBookPage/bookDetail/{bookNo}(bookNo=${book.bookNo})}" class="book-link"> -->
 
-      <div th:each="book : ${bookList}" class="book-item" 
-      data-book-no="${book.bookNo}" 
-      data-score-avg="${book.scoreAvg}">
-        <div>
-          <!-- bookNo를 input 요소의 value로 저장해둠 -->
-          <input type="checkbox" th:value="${book.bookNo}" class="book-checkbox" id="bookCheckbox">
-        </div>
-        <a th:href="@{/searchBookPage/bookDetail/{bookNo}(bookNo=${book.bookNo})}">
           <div class="book-item-image">
             <img th:src="${book.bookCover != null ? book.bookCover : '/images/bookCover/default.jpg'}" alt="책 이미지">
           </div>
+          
+          <!-- 책 상세 정보 -->
           <div class="book-item-details">
-            <div class="book-item-info">
-              <p><strong>제목:</strong>
-                 <span class="book-title" th:text="${book.bookTitle}">책 제목</span>
-                </p>
-              <p><strong>지은이:</strong>
-                 <span th:text="${book.bookWriter}">지은이</span>
-                </p>
-              <p><strong>출판사:</strong>
-                 <span th:text="${book.companyName}">출판사</span>
-                </p>
-              <p><strong>옮긴이:</strong>
-                 <span th:text="${book.bookTalt != null ? book.bookTalt : '없음'}"></span>
-              </p>
-              <p><strong>가격:</strong> <span th:text="${book.bookPrice}">0</span>원
-              </p>
-              <p><strong>출간일:</strong> <span th:text="${book.bookDate.substring(0, 10)}">출간일</span></p>
-              <div class="perStars">
-                <div class="stars" title="평점">
-                  <!-- 배경 별 -->
-                  <div class="stars-background" style='position:absolute; width:100%; overflow:hidden; color:#cdcdcd;'>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </div>
-                  <!-- 실제 별 -->
-                  <div class="stars-real"
-                    th:style="'width: ' + ${(book.scoreAvg / 5) * 100} + '%; position: absolute; overflow: hidden; white-space: nowrap;'">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                  </div>
+            <p><strong>제목:</strong> <span th:text="${book.bookTitle}">책 제목</span></p>
+            <p><strong>지은이:</strong> <span th:text="${book.bookWriter}">지은이</span></p>
+            <p><strong>출판사:</strong> <span th:text="${book.companyName}">출판사</span></p>
+            <p><strong>옮긴이:</strong> <span th:text="${book.bookTalt != null ? book.bookTalt : '없음'}"></span></p>
+            <p><strong>가격:</strong> <span th:text="${book.bookPrice}">0</span>원</p>
+            <p><strong>출간일:</strong> <span th:text="${book.bookDate.substring(0, 10)}">출간일</span></p>
+            
+            <div class="perStars">
+              <div class="stars" title="평점">
+                <!-- 배경 별 -->
+                <div class="stars-background" style='position:absolute; width:100%; overflow:hidden; color:#cdcdcd;'>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
                 </div>
-                <p><strong>평점:</strong> <span th:text="${book.scoreAvg}">0.0</span></p>
+                <!-- 실제 별 -->
+                <div class="stars-real"
+                  th:style="'width: ' + ${(book.scoreAvg / 5) * 100} + '%; position: absolute; overflow: hidden; white-space: nowrap;'">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
               </div>
-              
+              <p><strong>평점:</strong> <span th:text="${book.scoreAvg}">0.0</span></p>
             </div>
           </div>
         </a>
+
+        <!-- 액션 버튼 -->
         <div class="book-item-actions">
-          <!-- 장바구니 버튼 클릭 시 singleCartBtn(this) 호출 -->
-          <label class="buttonBag">
-            <button type="button" onclick="singleCartBtn(this)" th:if="${session.loginMember != null}">장바구니</button>
-          </label>
-          <label class="buttonWish">
-            <button type="button" onclick="singleWishListBtn(this)" th:if="${session.loginMember != null}">찜</button>
-          </label>
-    
+          <button type="button" onclick="singleCartBtn(this)" th:if="${session.loginMember != null}">장바구니</button>
+          <button type="button" onclick="singleWishListBtn(this)" th:if="${session.loginMember != null}">찜</button>
         </div>
       </div>
-      </div>
-
     </form>
+
+    <!-- 페이지네이션 -->
     <div class="pagination-area" th:unless="${#lists.isEmpty(bookList)}">
-
       <ul class="pagination" th:object="${pagination}">
-
-        <!-- 첫 페이지로 이동 -->
         <li><a href="#">&lt;&lt;</a></li>
-
-        <!-- 이전 목록 마지막 번호로 이동 -->
         <li><a href="#">&lt;</a></li>
-
-        <!-- 특정 페이지로 이동 -->
-
-
-        <!-- 
-          #numbers.sequence(startPage, endPage)
-          -> startPage 부터 endPage까지 1씩 증가하는 숫자를 가진
-             List를 만들어서 반환
-        -->
         <th:block th:each="i : *{#numbers.sequence(startPage, endPage)}">
-
-          <!-- 현재 보고있는 페이지 -->
           <li th:if="${i} == *{currentPage}">
             <a class="current" th:text="${i}">현재 페이지</a>
           </li>
-
-          <!-- 보고있지 않은 페이지 -->
           <li th:unless="${i} == *{currentPage}">
             <a href="#" th:text="${i}">이동할 수 있는 페이지</a>
           </li>
-
         </th:block>
-
-
-        <!-- 다음 목록 시작 번호로 이동 -->
         <li><a href="#">&gt;</a></li>
-
-        <!-- 끝 페이지로 이동 -->
         <li><a href="#">&gt;&gt;</a></li>
       </ul>
-
     </div>
+
   </main>
   <script th:inline="javascript">
     const pagination = /*[[${pagination}]]*/ {};
